# BagFromImages

./: CMakeLists.txt  README.md  main.cc  package.xml
src/: main.cc
