<package>
  <name>rosbag_from_images</name>
  <version>0.0.1</version>
  <description>
ROS package to generate a rosbag from a collection of images. Images are ordered alphabetically. The timestamp for each image is assigned according to the specified frequency or is obtained from the filename. 
  </description>
  <license>BSD</license>
  <maintainer email="wechtc@gmail.com">Christopher Wecht</maintainer>
  <author>Raul Mur-Artal</author>
  <author>Christopher Wecht</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>catkin</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
</package>


